objects/Salesforce_Field_Ids__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>FV2: This custom setting will store the field ids in the apex class ClsVFTeamRoomDetail</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Name__c</fullName>
        <label>SObject Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Salesforce Field Ids</label>
</CustomObject>